[tool.poetry]
name = "lkml"
version = "0.2.2"
description = "A speedy LookML parser implemented in pure Python."
repository = "https://github.com/joshtemple/lkml"
authors = ["Josh Temple"]
readme = "README.md"
license = "MIT"
keywords = ['lookml', 'looker', 'parser']

[tool.poetry.scripts]
lkml = 'poetry.console:run'

[tool.poetry.dependencies]
python = ">=3.7,<4"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
pytest-black = "^0.3.10"
pytest = "^6.0.1"
flake8 = "^3.8.3"
isort = "^5.4.2"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pytest-mypy = "^0.6.2"
pytest-isort = "^1.1.0"

[tool.black]
line-length = 88
target_version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

