[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:
    self.logger.debug
    if file_object:

[flake8]
max-line-length = 88
max-complexity = 8
ignore = E501,E203,W503,E701
builtins = unicode
tee = True
exclude = venv,env,.venv

[tool:pytest]
addopts = -vvv
python_files = tests/*.py

[pydocstyle]
convention = google
